--- a/markup/components/price/price.jade
+++ b/markup/components/price/price.jade
@@ -4,9 +4,9 @@ mixin price(data)
       .title
         h2 
           span ХХ лет  
-          | мы специализируемся на проверенных
+          | мы специализируемся на проверенных 
           br
-          | временем  
+          |  временем  
           span V-образных двигателях
       
       .price-tagline
@@ -31,12 +31,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-236М2
           .price-cell
+            .price-cell__label л.с./Н*м
             span 180/2100
           .price-cell
+            .price-cell__label Применяемость
             span Автомобили, сельхозтехника, краны, Т-150 с Комплектом Переоборудования
           .price-cell
+            .price-cell__label Цена, руб 
             span от 230 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236М2') Узнать точную цену
@@ -44,12 +48,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-236Г
           .price-cell
+            .price-cell__label л.с./Н*м
             span 150/1700
           .price-cell
+            .price-cell__label Применяемость
             span Спецтехника
           .price-cell
+            .price-cell__label Цена, руб 
             span от 230 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Г') Узнать точную цену
@@ -57,12 +65,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-236Д
           .price-cell
+            .price-cell__label л.с./Н*м
             span 175/2100
           .price-cell
+            .price-cell__label Применяемость
             span Тракторы Т-150К-09, ХТЗ-17221
           .price-cell
+            .price-cell__label Цена, руб
             span от 240 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-236Д') Узнать точную цену
@@ -70,25 +82,33 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-238Б
           .price-cell
+            .price-cell__label  л.с./Н*м
             span 300/2100
           .price-cell
+            .price-cell__label Применяемость
             span Автомобили МАЗ, спецтехника
           .price-cell
+            .price-cell__label Цена, руб
             span от 310 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238Б') Узнать точную цену
         
         //- Price Row
         .price-row
-          .price-cell
+          .price-cell 
+            .price-cell__label Модель
             span ЯМЗ-238Д
           .price-cell
+            .price-cell__label л.с./Н*м
             span 330/2100
           .price-cell
+            .price-cell__label Применяемость
             span Автомобили МАЗ, КрАЗ, МЗКТ
           .price-cell
+            .price-cell__label Цена, руб
             span от 310 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238Д') Узнать точную цену
@@ -96,12 +116,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-238НД4-1
           .price-cell
+            .price-cell__label л.с./Н*м
             span 250/1900
           .price-cell
+            .price-cell__label Применяемость
             span Тракторы Т-15.01Я, 221Я «Промтрактор»
           .price-cell
+            .price-cell__label Цена, руб
             span от 430 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238НД4-1') Узнать точную цену
@@ -109,12 +133,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-238НД5
           .price-cell
+            .price-cell__label л.с./Н*м
             span 300/1900
           .price-cell
+            .price-cell__label Применяемость
             span Тракторы К-744Р «Кировец»
           .price-cell
+            .price-cell__label Цена, руб
             span от 330 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-238НД5') Узнать точную цену
@@ -122,12 +150,16 @@ mixin price(data)
         //- Price Row
         .price-row
           .price-cell
+            .price-cell__label Модель
             span ЯМЗ-240М2
           .price-cell
+            .price-cell__label л.с./Н*м
             span 360/2100
           .price-cell
+            .price-cell__label Применяемость
             span Карьерные самосвалы БелАЗ-75404 и мод.(общ.)
           .price-cell
+            .price-cell__label Цена, руб
             span от 450 000
           .price-cell.price-cell__link
             a(href='javascript:;' data-fancybox data-src="#popup-model" data-title='ЯМЗ-240М2') Узнать точную цену
