--- a/markup/components/contract/contract.styl
+++ b/markup/components/contract/contract.styl
@@ -43,7 +43,9 @@
     &__title
       text-align center
       margin-bottom 15px
-
+      display flex
+      align-items center
+      justify-content center
       white-space nowrap
     &__text
       p
