--- a/markup/static/stylus/etc/etc.styl
+++ b/markup/static/stylus/etc/etc.styl
@@ -541,3 +541,144 @@
       padding 40px 20px
       span
         font-size 20px
+
+@media screen and (max-width: 480px)
+
+  .header
+    &-cnt
+      &:first-child
+        margin-right 0
+        .header-phone
+          a
+            right 0
+
+    &-phone
+      a
+        font-size 14px
+    &-worktime
+      span
+        font-size 14px
+    &-mail
+      a
+        font-size 14px
+  h1,
+  h2
+    font-size 20px
+    line-height 30px
+  .home
+    &-adv
+      &__text
+        span
+          font-size 12px
+          line-height 16px
+      &__icon
+        display flex
+        justify-content center
+        margin-bottom 10px
+        img
+          height 60px
+
+  .button
+    height 60px
+    padding 0
+    width 100%
+    justify-content center
+    span
+      font-size 14px
+
+  .home
+    height: auto
+    padding-bottom 60px
+  
+  section
+    .title
+      h1,
+      h2
+        br
+          display none
+  .offer
+    &-item
+      width 100%
+      &__photo
+        width 100%
+        height 200px
+      
+  .video-wrapper
+    height 250px
+    a
+      &::after
+        width 200px
+        height 200px
+  .save
+    &-item
+      width 100%
+      &__photo
+        margin-bottom 15px
+      &__title
+        margin-bottom 10px
+
+  .advantages
+    &-item
+      width 100%
+      margin-bottom 30px
+  .price-row
+    width 100%
+  .price-bottom__tl h3
+    text-align center
+
+  .contract-item
+    width 100%
+
+  .reviews-slide__item
+    width 100%
+  .slick-next, .slick-prev
+    top -15px
+  .reviews-slider
+    padding-top 50px
+  .virew-item
+    width 100%
+  .sertificates-item
+    width 100%
+    margin-right 0
+  .portfolio
+    &-item
+      width 100%
+      height 225px
+
+  .footer
+    &-item
+      width 100%
+      margin-bottom 30px
+      &:last-child
+        margin-bottom 0
+        margin-top 0
+  .contacts-pop
+    width 100%
+  .contacts
+    height 400px
+  .any
+    &-bottom
+      flex-wrap: wrap
+
+  .any-phones a
+    font-size 20px
+    margin-bottom 10px
+  .quiz-controller
+    flex-wrap: wrap
+    .quiz-next
+      margin-left 0
+      margin-top 10px
+  .quiz.showform .form-row .form-group
+    width 100%
+    &:nth-child(4),
+    &:nth-child(5)
+      width 100%
+  h3
+    font-size 18px
+    line-height 24px
+    
+  .popup
+    padding-left 20px
+    padding-right 20px
+  .reviews-pop .reviews-slide__item
+    padding 40px 20px
