--- a/markup/components/any/any.jade
+++ b/markup/components/any/any.jade
@@ -33,7 +33,7 @@ mixin any(data)
 
             a(href="#").any-write
               .any-write__icon
-                img(src="static/img/assets/any/wt.png")
+                img(src="static/img/assets/any/wt.png" alt='whatsapp')
               .any-write__span
                 span Написать
             
@@ -42,4 +42,4 @@ mixin any(data)
               span Ведущий специалист
 
         .any-image
-          img(src="static/img/assets/any/spec.png", alt="")
+          img(src="static/img/assets/any/spec.png", alt="Specialist")
