--- a/markup/components/contract/contract.jade
+++ b/markup/components/contract/contract.jade
@@ -17,7 +17,7 @@ mixin contract()
         .contract-item
           .contract-item__photo
             .contract-item__number 1
-            img(src="static/img/assets/contract/c1.png", alt="")
+            img(src="static/img/assets/contract/c1.png", alt="Contract Item")
           .contract-item__title
             h3 Переговоры
           .contract-item__text
@@ -26,7 +26,7 @@ mixin contract()
         .contract-item
           .contract-item__photo
             .contract-item__number 2
-            img(src="static/img/assets/contract/c2.png", alt="")
+            img(src="static/img/assets/contract/c2.png", alt="Contract Item")
           .contract-item__title
             h3 Наше предложение
           .contract-item__text
@@ -35,7 +35,7 @@ mixin contract()
         .contract-item
           .contract-item__photo
             .contract-item__number 3
-            img(src="static/img/assets/contract/c3.png", alt="")
+            img(src="static/img/assets/contract/c3.png", alt="Contract Item")
           .contract-item__title
             h3 Работы
           .contract-item__text
@@ -44,7 +44,7 @@ mixin contract()
         .contract-item
           .contract-item__photo
             .contract-item__number 4
-            img(src="static/img/assets/contract/c4.png", alt="")
+            img(src="static/img/assets/contract/c4.png", alt="Contract Item")
           .contract-item__title
             h3 Упаковка и доставка
           .contract-item__text
