--- a/markup/components/footer/footer.jade
+++ b/markup/components/footer/footer.jade
@@ -110,7 +110,7 @@ mixin footer(data)
     .reviews-slide
       .reviews-slide__item
         .reviews-slide__photo
-          img(src="static/img/assets/reviews/rev.jpg",  id='rev-pop__img' alt="")
+          img(src="static/img/assets/reviews/rev.jpg",  id='rev-pop__img' alt="Reviews Photo")
         .reviews-slide__text
           h3#rev-pop__name Филипп Иванов 
           span#rev-pop__trans Техника, на которую установили двигатель
