--- a/markup/components/home/home.jade
+++ b/markup/components/home/home.jade
@@ -21,7 +21,7 @@ mixin home(data)
             //- Home Adv Item
             .home-adv__item
               .home-adv__icon
-                img(src="static/img/assets/home/h1.png", alt="")
+                img(src="static/img/assets/home/h1.png", alt="Home Advantage")
               .home-adv__text 
                 span Отгружаем 
                   br
@@ -30,7 +30,7 @@ mixin home(data)
             //- Home Adv Item
             .home-adv__item
               .home-adv__icon
-                img(src="static/img/assets/home/h2.png", alt="")
+                img(src="static/img/assets/home/h2.png", alt="Home Advantage")
               .home-adv__text 
                 span Гарантия  
                   br
@@ -41,7 +41,7 @@ mixin home(data)
             //- Home Adv Item
             .home-adv__item
               .home-adv__icon
-                img(src="static/img/assets/home/h3.png", alt="")
+                img(src="static/img/assets/home/h3.png", alt="Home Advantage")
               .home-adv__text 
                 span Доставка
                   br
@@ -54,4 +54,4 @@ mixin home(data)
 
         .home-right
           .home-image
-            img(src="static/img/assets/home/diesel.png", alt="")
+            img(src="static/img/assets/home/diesel.png", alt="Home Diesel")
