--- a/markup/components/offer/offer.jade
+++ b/markup/components/offer/offer.jade
@@ -1,7 +1,7 @@
 mixin offer(data)
   section.offer
     .offer-element
-      img(src="static/img/assets/offer/bottom.png", alt="")
+      img(src="static/img/assets/offer/bottom.png", alt="Offer Element")
     .content
       .title
         h2 Предложим варианты двигателей, 
@@ -13,7 +13,7 @@ mixin offer(data)
 
         .offer-item
           .offer-item__photo
-            img(src="static/img/assets/offer/off1.jpg", alt="")
+            img(src="static/img/assets/offer/off1.jpg", alt="Offer Item")
           .offer-item__title
             h3 После капитального ремонта
           .offer-item__text
@@ -24,7 +24,7 @@ mixin offer(data)
 
         .offer-item
           .offer-item__photo
-            img(src="static/img/assets/offer/off2.jpg", alt="")
+            img(src="static/img/assets/offer/off2.jpg", alt="Offer Item")
           .offer-item__title
             h3 Индивидуальной сборки
           .offer-item__text
@@ -41,4 +41,4 @@ mixin offer(data)
         .video-wrapper
 
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox)
-            img(src="static/img/assets/offer/video.jpg", alt="")
+            img(src="static/img/assets/offer/video.jpg", alt="Video Diesel")
