--- a/markup/components/portfolio/portfolio.jade
+++ b/markup/components/portfolio/portfolio.jade
@@ -11,55 +11,55 @@ mixin portfolio(data)
 
         a(href="static/img/assets/portfolio/p1b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p1.jpg")
+            img(src="static/img/assets/portfolio/p1.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p2b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p2.jpg")
+            img(src="static/img/assets/portfolio/p2.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p3.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p3.jpg")
+            img(src="static/img/assets/portfolio/p3.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
          a(href="static/img/assets/portfolio/p1b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p1.jpg")
+            img(src="static/img/assets/portfolio/p1.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p2b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p2.jpg")
+            img(src="static/img/assets/portfolio/p2.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p3.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p3.jpg")
+            img(src="static/img/assets/portfolio/p3.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
          a(href="static/img/assets/portfolio/p1b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p1.jpg")
+            img(src="static/img/assets/portfolio/p1.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p2b.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p2.jpg")
+            img(src="static/img/assets/portfolio/p2.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
         a(href="static/img/assets/portfolio/p3.jpg" data-fancybox).portfolio-item
           .portfolio-item__photo
-            img(src="static/img/assets/portfolio/p3.jpg")
+            img(src="static/img/assets/portfolio/p3.jpg" alt='Portfolio Item')
           .portfolio-item__name Модель: 
             span ЯМЗ 6511
         
