--- a/markup/components/reviews/reviews.jade
+++ b/markup/components/reviews/reviews.jade
@@ -19,7 +19,7 @@ mixin reviews(data)
           .reviews-slide
             .reviews-slide__item
               .reviews-slide__photo
-                img(src="static/img/assets/reviews/rev.jpg", alt="")
+                img(src="static/img/assets/reviews/rev.jpg", alt="Reviews item")
               .reviews-slide__text
                 h3.reviews-name Филипп Иванов
                 span.transp-name Техника, на которую установили двигатель 
@@ -32,7 +32,7 @@ mixin reviews(data)
           .reviews-slide
             .reviews-slide__item
               .reviews-slide__photo
-                img(src="static/img/assets/reviews/rev.jpg", alt="")
+                img(src="static/img/assets/reviews/rev.jpg", alt="Reviews item")
               .reviews-slide__text
                 h3.reviews-name Филипп Иванов №1
                 span.transp-name Техника, на которую установили двигатель №1
@@ -45,7 +45,7 @@ mixin reviews(data)
           .reviews-slide
             .reviews-slide__item
               .reviews-slide__photo
-                img(src="static/img/assets/reviews/rev.jpg", alt="")
+                img(src="static/img/assets/reviews/rev.jpg", alt="Reviews item")
               .reviews-slide__text 
                 h3.reviews-name Филипп Иванов №2
                 span.transp-name Техника, на которую установили двигатель №2
@@ -59,7 +59,7 @@ mixin reviews(data)
           .reviews-slide
             .reviews-slide__item
               .reviews-slide__photo
-                img(src="static/img/assets/reviews/rev.jpg", alt="")
+                img(src="static/img/assets/reviews/rev.jpg", alt="Reviews item")
               .reviews-slide__text
                 h3.reviews-name Филипп Иванов №3
                 span.transp-name Техника, на которую установили двигатель №3
