--- a/markup/components/sertificates/sertificates.jade
+++ b/markup/components/sertificates/sertificates.jade
@@ -14,13 +14,13 @@ mixin sertificates(data)
 
         //- Sertificates Item
         a(href="static/img/assets/sertificates/sb2.jpg" data-fancybox='sertificates').sertificates-item
-          img(src="static/img/assets/sertificates/s1.jpg", alt="")
+          img(src="static/img/assets/sertificates/s1.jpg", alt="Sertificate")
         
         //- Sertificates Item
         a(href="static/img/assets/sertificates/sb2.jpg" data-fancybox='sertificates').sertificates-item
-          img(src="static/img/assets/sertificates/s2.jpg", alt="")
+          img(src="static/img/assets/sertificates/s2.jpg", alt="Sertificate")
         
         //- Sertificates Item
         a(href="static/img/assets/sertificates/sb3.jpg" data-fancybox='sertificates').sertificates-item
-          img(src="static/img/assets/sertificates/s3.jpg", alt="")
+          img(src="static/img/assets/sertificates/s3.jpg", alt="Sertificate")
         
