--- a/markup/components/virew/virew.jade
+++ b/markup/components/virew/virew.jade
@@ -13,42 +13,42 @@ mixin virew(data)
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
 
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
         
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
         
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
         
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
 
         //- Virew Item
         .virew-item
           a(href="https://www.youtube.com/watch?v=RBumgq5yVrA" data-fancybox).virew-video
-            img(src="static/img/assets/virew/image.jpg")
+            img(src="static/img/assets/virew/image.jpg" alt="Video Reviews")
           h4.virew-title Сергей Иванов
           .virew-city г. Воронеж
      
