--- a/markup/pages/index.jade
+++ b/markup/pages/index.jade
@@ -19,6 +19,8 @@ html(class="no-js", lang="ru")
   include ../components/footer/footer
   head
     +head(head.defaults)
+    script(src="https://api-maps.yandex.ru/2.1/?apikey=6824bb76-009e-4ddf-973e-1b99bdb141d3&lang=ru_RU" type="text/javascript")
+  
   body.page
     |%=symbols=%
 
