--- a/markup/static/stylus/etc/etc.styl
+++ b/markup/static/stylus/etc/etc.styl
@@ -135,6 +135,11 @@
   .offer
     background-size 15%
 
+  .home.home-black
+    padding-top 210px 
+    height 930px
+    .home-left
+      width 55%
 
 @media screen and (max-width: 992px)
   .content
@@ -244,6 +249,18 @@
           width 100%
           margin-right 0
 
+  .home.home-black
+    .home
+      &-advantages
+        flex-wrap: wrap
+      &-adv
+        &__item
+          width 100%
+          margin-bottom 20px
+          &:last-child
+            margin-bottom 0
+    .home-left
+      width 50%
 
 @media screen and (max-width: 767px)
   .content
@@ -486,6 +503,63 @@
         width 50%
         margin-top 50px
 
+  .thanks
+    &-icon
+      width 100px
+    &-title
+      h1
+        font-size 40px
+    &-number
+      span
+        font-size 25px
+    &-edit
+      span
+        font-size 16px
+        line-height 24px
+        br
+          display none
+    &-home
+      a
+        font-size 25px
+
+  .header.header-shadow
+    height: auto
+    padding-top 10px
+    padding-bottom 15px 
+  
+  .home.home-black
+    background-position 0
+    height auto
+    padding-bottom 75px
+    .home-left
+      width 100%
+    .home
+      &-advantages
+        padding-bottom 20px
+      &-adv
+        &__item
+          width 30%
+    .home-right
+      display flex
+      justify-content center
+
+      .home-form
+        position static
+        top: auto
+  
+        right auto
+        left auto
+        bottom: auto
+    .home-image
+      display none
+    .home-wrapper
+      flex-wrap: wrap
+    .home-right
+      width 100%
+
+  
+  .header .logo
+    margin-right 0
 
 @media screen and (max-width: 576px)
   .content
@@ -541,6 +615,19 @@
       padding 40px 20px
       span
         font-size 20px
+
+  .thanks
+
+    &-title
+      h1
+        font-size 30px
+    &-number
+      span
+        font-size 20px
+    &-home
+      a
+        font-size 20px
+
 
 @media screen and (max-width: 480px)
 
@@ -682,3 +769,42 @@
     padding-right 20px
   .reviews-pop .reviews-slide__item
     padding 40px 20px
+
+  .thanks
+    &-icon
+      margin-bottom 20px  
+    &-title
+      h1
+        font-size 24px
+    &-number
+      flex-wrap: wrap
+      span
+        width 100%
+        text-align center
+        display block
+        &:first-child
+          margin-bottom 10px
+    &-edit
+      a
+        font-size 16px
+
+  .home-adv__text
+    padding-right 0
+    text-align center
+  .home-form
+    .popup
+      width 100%
+      padding 40px 20px
+    .popup-title
+      br
+        display none
+    .popup-subtitle
+      br
+        display none
+  .popup
+    &-title
+      font-size 18px
+    &-subtitle
+      font-size 16px
+  .home.home-black .home-form button.button span
+    font-size 12px
