--- a/markup/components/contract/contract.jade
+++ b/markup/components/contract/contract.jade
@@ -15,6 +15,10 @@ mixin contract()
       .contract-items
 
         .contract-item
+          .contract-item__bullets
+            span
+            span
+            span
           .contract-item__photo
             .contract-item__number 1
             img(src="static/img/assets/contract/c1.png", alt="Contract Item")
@@ -24,6 +28,10 @@ mixin contract()
             p Мы выясним все детали заказа, включая нужную модель, комплектацию двигателя и Ваш бюджет, чтобы определить окончательную цену и сроки
         
         .contract-item
+          .contract-item__bullets
+            span
+            span
+            span
           .contract-item__photo
             .contract-item__number 2
             img(src="static/img/assets/contract/c2.png", alt="Contract Item")
@@ -33,6 +41,10 @@ mixin contract()
             p Вышлем наше предложение Вам на электронную почту, в мессенджеры или сообщим по телефону — как Вам будет удобнее
         
         .contract-item
+          .contract-item__bullets
+            span
+            span
+            span
           .contract-item__photo
             .contract-item__number 3
             img(src="static/img/assets/contract/c3.png", alt="Contract Item")
@@ -42,6 +54,7 @@ mixin contract()
             p Подбор и подготовка двигателя в соответствии с выбранным Вами вариантом
         
         .contract-item
+      
           .contract-item__photo
             .contract-item__number 4
             img(src="static/img/assets/contract/c4.png", alt="Contract Item")
