--- a/markup/components/contract/contract.styl
+++ b/markup/components/contract/contract.styl
@@ -47,6 +47,8 @@
       align-items center
       justify-content center
       white-space nowrap
+      h3
+        font-size 27px
     &__text
       p
         color $gr
@@ -62,3 +64,22 @@
       font-family $Semi
       color $bl
     
+
+.contract
+  &-item
+    position relative
+    &__bullets
+      display flex
+      align-items center
+      position absolute
+      top 60px
+      right -30px
+      span
+        display block
+        width 10px
+        height 10px
+        border-radius: 50%
+        background #0c367c
+        margin-right 20px
+        &:last-child
+          margin-right 0
